--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-load-script": "^0.0.6",
     "react-scripts": "3.1.2"
   },
   "scripts": {
